[package]
name = "pt-rtd"
description = "Calculation of resistance and temperature for platinum type RTDs, e.g. PT100."
authors = ["Florian Beck <info@florian-beck.de>"]
categories = ["embedded", "no-std"]
keywords = ["pt100", "pt1000", "rtd", "thermometer"]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/thecodechemist99/pi-pico-mp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.6"